# pxspr.midi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-info.json.in
docs/: pxspr.midiin.xml  pxspr.midiinfo.xml  pxspr.midiout.xml  pxspr.sysexin.xml
source/: CMakeLists.txt
source/pxspr.midi/: CMakeLists.txt  version.h.in
source/pxspr.midi/pxspr.midiin/: CMakeLists.txt  pxspr.midiin.cpp
source/pxspr.midi/pxspr.midiinfo/: CMakeLists.txt  pxspr.midiinfo.cpp
source/pxspr.midi/pxspr.midiout/: CMakeLists.txt  pxspr.midiout.cpp
source/pxspr.midi/pxspr.sysexin/: CMakeLists.txt  pxspr.sysexin.cpp
